@@ -1,6 +1,7 @@
 package br.com.santander.desafio.infra.jpa;
 
 
+import br.com.santander.desafio.application.mappers.AgencyMapper;
 import br.com.santander.desafio.domain.model.Agency;
 import br.com.santander.desafio.domain.model.Point;
 import br.com.santander.desafio.domain.port.AgencyRepository;
@@ -8,6 +9,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Repository
@@ -15,22 +18,23 @@ import java.util.stream.Collectors;
 public class AgencyRepositoryAdapter implements AgencyRepository {
     private final AgencyJpaRepository agencyJpaRepository;
 
-    @Override public void save(Agency agency){
-        var ae = new AgencyEntity();
-        ae.setId(agency.id());
-        ae.setPosY(agency.pos().y());
-        ae.setPosX(agency.pos().x());
-        agencyJpaRepository.save(ae);
-
+    @Override
+    public Agency save(Agency agency) {
+        AgencyEntity agencyEntity = agencyJpaRepository.save(AgencyMapper.toEntity(agency));
+        return AgencyMapper.fromEntity(agencyEntity);
     }
 
-    @Override public List<Agency> listAllAgencys(){
+    @Override
+    public List<Agency> listAllAgencies() {
         return agencyJpaRepository.findAll().stream()
-                .map(a -> new Agency(a.getId(), new Point(a.getPosX(), a.getPosY()))).collect(Collectors.toList());
+                .map(AgencyMapper::fromEntity)
+                .toList();
     }
 
-
-    @Override public boolean exists(String id){ return agencyJpaRepository.existsById(id); }
+    @Override
+    public Optional<Agency> findById(UUID id) {
+        return agencyJpaRepository.findById(id).map(AgencyMapper::fromEntity);
+    }
 
 
 }
